test: implementa testes unitários e de integração com melhorias na nomenclatura e validações